kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-flask
  namespace: community-devops
  labels:
    app: restapi-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi-flask
  template:
    metadata:
      labels:
        app: restapi-flask
    spec:
      containers:
      - name: restapi-flask
        image: docker.io/library/restapi-flask:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5000
        #   initialDelaySeconds: 15
        #   periodSeconds: 15
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5000
        #   initialDelaySeconds: 15
        #   periodSeconds: 15
        resources: {}
