kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-flask-service
  namespace: community-devops
spec:
  type: NodePort
  selector:
    app: restapi-flask
  ports:
  - port: 5000
    targetPort: 5000
