kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-flask-ingress
  labels:
    name: restapi-flask-ingress
spec:
  rules:
  - host: api.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/healthy"
        backend:
          service:
            name: restapi-flask-service
            port:
              number: 5000
